Revision history for Data::Text

0.11
	Calling new() on an object now returns a clone rather than setting the defaults in the new object

0.10	Mon Aug  1 21:01:05 EDT 2022
	set() when given a list of strings would append instead of setting
	Carp when given a reference to an empty array
	Give more helpful error message
	Simplify the code
	Added == and != operators

0.09	Tue Nov 16 08:14:19 EST 2021
	new() now supports initialisation of the object

0.08	Sun Nov 14 18:54:41 EST 2021
	Added the set() method

0.07	Tue Nov  9 19:11:42 EST 2021
	Length() now returns 0 when no text has been appended

0.06	Tue Nov  9 09:55:19 EST 2021
	Carp if no text is given

0.05	Thu Sep 30 18:17:43 EDT 2021
	Added replace()

0.04	Wed Sep 15 07:33:53 EDT 2021
	Take semi-colons as punctuation
	Added the rtrim() method

0.03	Mon Sep 13 17:53:32 EDT 2021
	Added the trim() method

0.02	Mon Sep 13 14:44:50 EDT 2021
	append() messages can now be daisy chained
	Added length() method
	append() now supports a reference to an array of strings to add

0.01	Sun Sep 12 16:40:26 EDT 2021
        First draft